[tool.poetry]
name = "dbt-feature-flags"
version = "0.5.2"
description = "Use feature flags in dbt models"
authors = ["z3z1ma <butler.alex2010@gmail.com>"]
include = ["zzz_dbt_feature_flags.pth"]
readme = "README.md"
repository = "https://github.com/z3z1ma/dbt-feature-flags"
homepage = "https://github.com/z3z1ma/dbt-feature-flags"

[tool.poetry.dependencies]
python = ">=3.8,<4"
dbt-core = ">=1.0.0,<2"
# SDK dependencies are optional — install only the provider you need:
#   pip install dbt-feature-flags[fme]
#   pip install dbt-feature-flags[harness]
#   pip install dbt-feature-flags[launchdarkly]
harness-featureflags    = { version = ">1,<2",    optional = true }
splitio-client          = { version = ">=10,<11", optional = true }
launchdarkly-server-sdk = { version = ">=7,<9",   optional = true }

[tool.poetry.extras]
harness      = ["harness-featureflags"]
fme          = ["splitio-client"]
launchdarkly = ["launchdarkly-server-sdk"]

[tool.poetry.scripts]
dbt-ff-preflight = "dbt_feature_flags.preflight:cli"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
